(Sec 6) revise based on Matt's comments

--- a/DiffTerm/inputs/wjdlatexmacs.sty
+++ b/DiffTerm/inputs/wjdlatexmacs.sty
@@ -90,6 +90,7 @@
 \newcommand{\Fix}[1]{\ensuremath{\breve{\mathcal{D}}(#1)}}
 \newcommand{\sansClo}{\ensuremath{\operatorname{\mathsf{Clo}}}}
 \newcommand{\sansR}{\ensuremath{\mathsf{R}}}
+\newcommand{\sansd}{\ensuremath{\mathsf{d}}}
 \newcommand{\sansr}{\ensuremath{\mathsf{r}}}
 \newcommand{\sansS}{\ensuremath{\mathsf{S}}}
 \newcommand{\sanss}{\ensuremath{\mathsf{s}}}
