--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -1895,7 +1895,7 @@ we take
 \end{align*}
 to be the maps defined as follows:
 \begin{align*}
-  \text{for }\;  & S \subseteq A^2 \times \{0,1\}\; \text{ and } \;T \subseteq \Clo_3(\alg{A}),
+  \text{for }& \;  S \subseteq A^2 \times \{0,1\}\; \text{ and } \;T \subseteq \Clo_3(\alg{A}),
   \text{ let }\\
   \dtr S &= \{t \in \Clo_3(\alg{A}) \colon (s,t) \in \dtr \text{ for all } s \in S\}, \text{ and }\\
   \breve{\dtr} T &= \{s \in A^2 \times \{0,1\} \colon (s,t) \in \dtr \text{ for all } t \in T\}.
@@ -2178,8 +2178,8 @@ Here is a practical consequence of Theorem~\ref{thm:local-diff-terms}.
   Section~\ref{sec:algorithm-its-time}.  Recall, $n = |A|$, and
   $m=\|\alg A\| = \sum_{i=0}^r k_i n^i$, where $k_i$ is the number of basic
   operations of arity~$i$, and $r$ is the largest arity of the basic
-  operations of $\alg{A}$. The following assertions follow from the
-  proof of Proposition~\ref{speedprop}: $\thetaab$,
+  operations of $\alg{A}$. The following assertions are consequences of (the
+  proof of) Proposition~\ref{speedprop}: $\thetaab$,
   $\delta$, and $S$ are computable in time $O(rm)$, $O(rm^2 + n^5)$,
   and $O(rm^2)$, respectively;
   $\thetaab$ and $\delta$ are computed for each pair $(a,b) \in A^2$;
@@ -2239,66 +2239,74 @@ Alternatively, if we wish to emphasize the means by which
 we arrived at the term that the table represents, we may use
 $\sanst_{x_1,\dots, x_k \mid u}$ to denote the table.
 
-\newcommand{\triple}{\ensuremath{(a_0,a_1),(b_0,a_1),(b_0,b_1)}}
+\newcommand{\tripzu}{\ensuremath{(a_0, b_0, 0), (a_1, b_1, 1)}}
 
+\newcommand{\triptik}{\ensuremath{(a,a'),(b,a'),(b,b')}}
+\newcommand{\pairtik}{\ensuremath{(a,b, 0), (a', b', 1)}}
+\newcommand{\abb}{\ensuremath{(a, b, b)}}
+\newcommand{\aabtik}{\ensuremath{(a', a', b')}}
+
+\newcommand{\cabxbtik}{\ensuremath{a/\com{\theta_{ab}} \times \{b'\}}}
 \subsection{Base step} %Algorithm~\ref{alg:ld-2}: implementation and complexity}
 \label{sec:cc-ld-2}
-The first stage of our method finds a term operation of type
-$(A\times A)^3 \to A\times A$, whose value at
-$(\triple)$ belongs to the set
-$a_0/\delta_0 \times \{b_1\} \cap \Sg^{\alg{A}\times \alg{A}} (\triple)$. In other words it finds a \ldto for the set $\{(a_0, b_0, 0), (a_1, b_1, 1)\}$.
-When such an operation is found, its Cayley table
-$\sanst$---a $3$-dimensional array satisfying
-$\sanst[a_0,b_0, b_0] \mathrel{\delta_0} a_0$ and  $\sanst[a_1,a_1,b_1] = b_1$---is
-included in the return set $\tabT$.
-% returned by Algorithm~\ref{alg:ld-2} represents an
+The first step of our method finds a ternary operation on 
+$\alg{A} \times \alg{A}$ that maps the element 
+$(\triptik)$ into the set 
+$\cabxbtik$. In other words, the first step finds a \ldto for
+$\{\pairtik\}$. 
+When such an operation is found, its Cayley table---a 
+$3$-dimensional array $\sanst$ satisfying
+$\sanst[a,b, b] \mathrel{\delta} a$ and  $\sanst[a',a',b'] = b'$---is
+returned.
 
 \RestyleAlgo{boxruled}%\LinesNumbered
 \begin{algorithm}%[ht]
-  % \SetKwInOut{Input}{Input}
-  % \SetKwInOut{Output}{Output}
 
-  \KwIn{$S = \{(a_0,b_0,0), (a_1, b_1, 1)\}$}
-  \KwOut{Cayley tables for all operations in $\dtr S$}
+  \KwIn{$S = \{\pairtik\}$}
+  \KwOut{Cayley table of an operation in $\dtr S$}
 
-  compute $\delta = \com{ \theta_0 }$ and form $C= (a_0/\delta) \times \{b_0\}$\;
-  compute $S=\Sg^{\alg{A}\times \alg{A}} (\triple)$\;
+  compute $\delta = \com{ \thetaab }$ and form $C= (a/\delta) \times \{b'\}$\;
+  compute $S=\Sg^{\alg{A}\times \alg{A}} (\triptik)$\;
   \ForAll{$(u,v)  \in S$} {
-    compute the table $\sanst_{\triple\mid (u,v)}$\;
-    \If{$(u,v) \in C \cap S$} {
-    include $\sanst_{\triple \mid (u,v)}$ in the set $\tabT$\;
+    compute the table $\sanst_{\triptik\mid (u,v)}$\;
+    \If{$(u,v) \in C$} {
+      \Return $\sanst_{\triptik \mid (u,v)}$\;
     }
   }
-  \Return $\tabT$.
-  \caption{Generate the set of all Cayley tables of \ldtos for $\{(a_0,b_0,0), (a_1, b_1, 1)\}$}
+  
+  \caption{Generate the Cayley table of a \ldto for $\{\pairtik \}$}
   \label{alg:ld-2}
   % in the $((a_0,a_1),(b_0,a_1),(b_0,b_1))$ position
 
 \end{algorithm}
+Note that the subalgebra $S$ in Algorithm~\ref{alg:ld-2}
+need not be computed in its entirety before 
+the condition inside the {\bf forall} loop is tested.  Naturally, we test
+$(u,v) \in C$ as soon as the new element $(u,v) \in S$ is generated.
 
-
-Recall the notation introduced in Section~\ref{sec:algorithm-its-time}:
+Let us now consider the computational complexity of 
+Algorithm~\ref{alg:ld-2}.
+Recall the notation introduced in Section~\ref{sec:algorithm-its-time};
 \begin{align*}
   n &= |A|, \quad m=\|\alg A\| = \sum_{i=0}^r k_i n^i,\\
 k_i&= \text{ the number of basic operations of arity~$i$},\\
 r &= \text{ the largest arity of the basic operations of $\alg{A}$.}
 \end{align*}
-Also, $\sanst_{\triple |(u,v)}$ denotes the Cayley table of a
-term operation that generates $(u,v)$ from the set $\{\triple \}$.
+Also, $\sanst_{\triptik |(u,v)}$ denotes the Cayley table of a
+term operation that generates $(u,v)$ from the set $\{\triptik \}$.
 
 Algorithm~\ref{alg:ld-2} can be implemented as follows:
 \begin{enumerate}
-  \item compute $\thetao$, in time $O(rm)$;
-  \item compute $C= a_0/\com{ \thetao } \times \{b_0\}$,
+  \item compute $\thetaab$, in time $O(rm)$;
+  \item compute $C= a/\com{ \thetaab } \times \{b'\}$,
   in time $O(rm^2 + n^5)$;
-  \item generate $S=\Sg^{\alg{A}\times \alg{A}} \{\triple\}$,
+  \item generate $S=\Sg^{\alg{A}\times \alg{A}} \{\triptik\}$,
     in time $O(r m^2)$;\\
     for each newly generated $(u,v) \in S$,
   \begin{itemize}
     \item construct and store the table
-      $\sanst_{\triple |(u,v)}$;
-    \item if $(u,v) \in C$, then add $\sanst_{\triple |(u,v)}$
-     to the list of tables to be returned;
+      $\sanst_{\triptik |(u,v)}$;
+    \item if $(u,v) \in C$, then return $\sanst_{\triptik |(u,v)}$;
   \end{itemize}
 \end{enumerate}
 
@@ -2317,229 +2325,109 @@ $O(r^2m^2n^3 + n^5)$.
 
 
 \subsection{Inductive stages}
-The method is based on the proof of Theorem~\ref{thm:local-diff-terms} and consists of two
+The method is based on the proof of Theorem~\ref{thm:local-diff-terms} and consists of $n^2$ 
 stages, each of which makes $n^2$ calls to Algorithm~\ref{alg:ld-2}.
 
 \renewcommand{\l}{\ensuremath{\ell}}
 Let $\l := n^2 -1$ and let $\{(a_0, b_0), (a_1, b_1), (a_2, b_2), \dots, (a_{\ell}, b_{\ell})\}$
 be an enumeration of the set $A^2$.
-For all $0\leq k < n^2$, define
+For all $1\leq k \leq n^2$, define
 \begin{align*}
-  Z_k &:= \{(a_0, b_0,0),(a_1, b_1,0), \dots, (a_k, b_k,0)\},\\
-  U_k &:= \{(a_0, b_0,1),(a_1, b_1,1), \dots, (a_k, b_k,1)\}.
+  Z_k &:= \{(a_0, b_0,0),(a_1, b_1,0), \dots, (a_{k-1}, b_{k-1},0)\},\\
+  U_k &:= \{(a_0, b_0,1),(a_1, b_1,1), \dots, (a_{k-1}, b_{k-1},1)\}.
 \end{align*}
-So $Z_{\ell} \cup U_{\ell} = A^2 \times \{0,1\}$.
-The first stage of our inductive procedure computes the Cayley table of a \ldto for
-$Z_0 \cup U_{\ell}$. The second stage does the same for
-$Z_1 \cup U_{\ell}$. This continues until we arrive at
-a Cayley table for $Z_{\ell} \cup U_{\ell} = A^2 \times \{0,1\}$.
-Thus, there are $n^2$ stages, each stage consisting of $n^2$ steps (described below),
+So $Z_{n^2} \cup U_{n^2} = A^2 \times \{0,1\}$.
+The first stage of our procedure computes the Cayley table of a \ldto for
+$Z_1 \cup U_{n^2}:= \{(a_0, b_0, 0)\} \cup A^2 \times \{1\}$. 
+The second stage does the same for
+$Z_2 \cup U_{n^2} := Z_1 \cup U_\ell \cup \{(a_1, b_1, 0)\}$.
+This continues for $n^2$ stages, after which we obtain a Cayley table of a \ldto for
+$Z_{n^2} \cup U_{n^2} = A^2 \times \{0,1\}$.
+There are $n^2$ stages, each stage consisting of $n^2$ steps (described below),
 and each step requiring a single call to Algorithm~\ref{alg:ld-2}.
-Therefore, we will make $n^4$ calls to Algorithm~\ref{alg:ld-2}, and
-the total running-time will be on the order of $r^2m^2n^7 + n^9$.
+Thus, the procedure makes $n^4$ calls to Algorithm~\ref{alg:ld-2}, and
+the total running-time is on the order of $r^2m^2n^7 + n^9$.
 
 Here are the steps that Stage 1 takes in order to compute a \ldto for
 $\{(a_0, b_0,0),(a_0, b_0,1),(a_1, b_1,1), \dots, (a_{\ell}, b_{\ell},1)\}$.
 \begin{enumerate}
-  \item Compute $p_1 \in \dtr \{(a_0, b_0, 0), (a_0, b_0, 1)\}$.\\[-8pt]
-  \item compute $q_1\in \dtr \{(a_0, b_0, 0), (p_1(a_1, a_1, b_1), b_1, 1)\}$; \\
-  form $p_2(x,y,z) = q_1(p_1(x,y,z), p_1(y,y,z), z)$;\\[-8pt]
-  \item compute $q_2\in \dtr \{(a_0, b_0, 0), (p_2(a_2, a_2, b_2), b_2, 1)\}$; \\
-    form $p_3(x,y,z) = q_2(p_2(x,y,z), p_2(y,y,z), z)$;\\
+  \item Compute the table $\sanst_1$ of a \ldt op for $\{(a_0, b_0, 0), (a_0, b_0, 1)\}$;\\[-8pt]
+  \item compute the table $\sanss_1$ of a \ldt op for $\{(a_0, b_0, 0), (\sanst_1[a_1, a_1, b_1], b_1, 1)\}$; \\
+  form the table $\sanst_2[x,y,z] = \sanss_1\bigl[\sanst_1[x,y,z], \sanst_1[y,y,z], z\bigr]$
+  ($\forall x,y,z$); 
+  \\[-8pt]
+  \item compute the table $\sanss_2$ of a \ldt op for $\{(a_0, b_0, 0), (\sanst_2[a_2, a_2, b_2], b_2, 1)\}$; \\
+    form the table $\sanst_3[x,y,z] = \sanss_2\bigl[\sanst_2[x,y,z], \sanst_2[y,y,z], z\bigr]$  ($\forall x,y,z$);\\
   $\vdots$
-  \item[($n^2$)] compute $q_{\l}\in \dtr \{(a_0, b_0, 0),  (p_{\l}(a_{\l}, a_{\l}, b_{\l}), b_{\l}, 1)\}$; \\
-  form $p_{n^2}(x,y,z) = q_{\l}(p_{\l}(x,y,z), p_{\l}(y,y,z), z)$.
+  \item[($n^2$)] compute a table $\sanss_{\l}$ of a \ldt op for $\{(a_0, b_0, 0),  (\sanst_{\l}[a_{\l}, a_{\l}, b_{\l}], b_{\l}, 1)\}$; \\
+  form the table $\sanst_{n^2}[x,y,z] = \sanss_{\l}\bigl[\sanst_{\l}[x,y,z], \sanst_{\l}[y,y,z], z\bigr]$
+  ($\forall x,y,z$).
 \end{enumerate}
-Let $s_0 := p_{n^2}$ denote the final result of Stage 1.
-We prove below that $s_0 \in \dtr (Z_0 \cup U_\l)$.
+Let $\sansd_1 := \sanst_{n^2}$ denote the final result of Stage 1. It is not hard to check that 
+$\sansd_1$ is the table of a \ldto for $Z_1 \cup U_{n^2}$. (See the proof of Theorem~\ref{thm:local-diff-terms}.)
 
-Stage 2 is very similar to Stage 1; however, our goal is to arrive at $s'_1 \in
-\dtr \bigl((a_1, s_0(a_1, b_1, b_1), 0) \cup U_{\l}\bigr)$. If we can generate
-such an operation, then we will define $s_1(x,y,z) := s'_1(x, s_0(x,y,y), s_0(x,y,z))$, which will
-belong to $\dtr \bigl(Z_1 \cup U_{\l}\bigr)$ (as we prove below).
-We continue in this way for $n^2$ stages of $n^2$ steps each, until we arrive at
-our goal: $d \in \dtr \bigl(Z_{\l} \cup U_{\l}\bigr)$.
+Stage 2 is very similar to Stage 1; however, we first produce the table, $\sansd'_2$, of a \ldto for 
+$\{(a_1, \sansd_1[a_1, b_1, b_1], 0)\} \cup U_{n^2}$, and then form the table 
+$\sansd_2[x,y,z] := \sansd'_2\bigl[x, \sansd_1[x,y,y], \sansd_1[x,y,z]\bigr]$ ($\forall x,y,z \in A$), 
+which will be the table of a \ldto for $Z_2 \cup U_{n^2}$.
+We continue in this way for $n^2$ stages of $n^2$ steps each, until we reach
+our goal: $\sansd:=\sansd_{n^2}$, the Cayley table of 
+a \ldto for $Z_{n^2} \cup U_{n^2}$.
 
-Without further ado, here is a precise description of the Stage 1 algorithm.
+Without further ado, here is a precise description of an algorithm that carries out each of the
+first $n^2$ stages.
 \RestyleAlgo{boxruled}
 %\LinesNumbered
 \begin{algorithm}
-  % \KwIn{$\tabT \eta_{\kk}$ and $\tabT \sA_{2k}$}
-  \KwOut{$p_{n^2} \in \dtr (Z_0 \cup U_{\l})$}
+  \KwIn{A pair $(a,b) \in A^2$}
+  \KwOut{The Cayley table of a \ldt op for $\{(a,b, 0)\} \cup U_{n^2}$.}
 
-  compute $p_1 \in \dtr \{(a_0, b_0, 0), (a_0, b_0, 1)\}$;
+  Compute the table $\sanst_1$ of a \ldt op for $\{(a,b, 0), (a_0, b_0, 1)\}$; %(Alg.~\ref{alg:ld-2});
 
-  \For {$1\leq i < {n^2}$} {
-    compute $q_i\in \dtr \{(a_0, b_0, 0), (p_i(a_i, a_i, b_i), b_i, 1)\}$;
+  \ForAll {$1\leq i < {n^2}$} {
+    compute the table $\sanss_i$ of a \ldto for $\{(a,b, 0), (\sanst_i[a_i, a_i, b_i], b_i, 1)\}$;
 
-    form $p_{i+1}(x,y,z) = q_i(p_i(x,y,z), p_i(y,y,z), z)$;
+    form $\sanst_{i+1}[x,y,z] = \sanss_i\bigl[\sanst_i[x,y,z], \sanst_i[y,y,z], z\bigr]$ $(\forall x,y,z)$;
   }
 
-  \Return $s_0:=p_{n^2}$
-  \caption{(Stage 1) compute \ldto for $Z_0 \cup U_{\l}$\label{alg:new-2-1}}
+  \Return $\sanst_{n^2}$
+  \caption{Return the Cayley table of a \ldto for $\{(a,b,0)\}\cup U_{n^2}$\label{alg:new-2-1}}
 \end{algorithm}
 
 
 \begin{lemma}
   \label{lem:19}
-  The operation $s_0$ returned by Algorithm~\ref{alg:new-2-1} is a \ldto for
-  $Z_0 \cup U_{\l}:=  \{(a_0, b_0,0),(a_0, b_0,1), (a_1, b_1,1), \dots, (a_{\l}, b_{\l}, 1)\}$.
+  The output of Algorithm~\ref{alg:new-2-1} is the Cayley table of a \ldto for
+  $Z_1 \cup U_{n^2}:=  \{(a, b,0),(a_0, b_0,1), (a_1, b_1,1), \dots, (a_{\l}, b_{\l}, 1)\}$.
 \end{lemma}
 
 \begin{proof}
-First we show $s_0(a_0,b_0,b_0) \comr{\theta_0} a_0$. Recall, $\ell:=n^2-1$, and
-$s_0(x,y,z):= q_\ell(p_\ell(x,y,z), p_\ell(y,y,z), z)$, so
-\begin{align*}
-  s_0(a_0,b_0,b_0)&= q_\ell(p_\ell(a_0,b_0,b_0), p_\ell(b_0,b_0,b_0), b_0);\\
-  &= q_\ell(p_\ell(a_0,b_0,b_0), b_0, b_0);
-\end{align*}
-\underline{Claim 1}: If $0 < k < n^2$, then $a_0 \comr{\thetao} p_k(a_0, b_0, b_0)$.\\
-\emph{Proof:} Clearly $a_0 \comr{\thetao} p_1(a_0, b_0, b_0)$, since $p_1 \in \dtr (a_0, b_0, 0)$.
-Fix $k < n^2$ and assume $p_{k-1} \in \dtr (a_0, b_0, 0)$; that is,
-$a_0 \comr{\thetao} p_{k-1}(a_0,b_0,b_0)$. Then
-$p_k(a_0,b_0,b_0) = q_{k-1}(p_{k-1}(a_0,b_0,b_0), b_0, b_0) \comr{\thetao}
-  q_{k-1}(a_0, b_0, b_0)$.
-The latter is congruent to  $a_0$ modulo $\com{\thetao}$, since
-$q_k\in \dtr \{(a_0, b_0, 0)\}$ for all $0< k < n^2$. This proves the claim, from which it follows that
-$s_0(a_0,b_0,b_0) \comr{\thetao} q_\ell(a_0, b_0, b_0) \comr{\thetao} a_0$, as desired.
-
-Next, we show for $0 < k < n^2$ that $s_0(a_k, a_k, b_k) = b_k$.
-By definition
-\begin{equation*}
-%\label{eq:s0-2}
-s_0(a_k, a_k, b_k) = q_\ell(p_\ell(a_k,a_k,b_k), p_\ell(a_k,a_k,b_k), b_k).
-\end{equation*}
-\underline{Claim 2}: If $0 = k< j$ or $0 \leq k\leq j < n^2$, then $p_j(a_k, a_k, b_k) = b_k$.\\
-  \emph{Proof:} By construction, $p_1 (a_0, a_0, b_0) = b_0$.  Fix $j$ and $k$ such that $0\leq k\leq j < n^2$.
-  Assume $p_j(a_k, a_k, b_k) = b_k$. Then, since $q_j$ belongs to $\dtr (p_{j}(a_j, a_j, b_j),b_j, 1)$, we have
-  \begin{align*}
-    p_{j+1}(a_k, a_k, b_k) &=
-    q_{j}(p_{j}(a_k, a_k, b_k), p_{j}(a_k, a_k, b_k), b_k)\\
-    &=\begin{cases}
-      q_{j}(b_k, b_k, b_k), & k<j\\
-      b_k, & k=j
-    \end{cases}\\
-    &= b_k.
-  \end{align*}
-Claim 2 is now proved, from which it follows that $s_0(a_k, a_k, b_k) = b_k$. This completes the proof of
-Lemma~\ref{lem:19}.
+  This follows from the proof of Theorem~\ref{thm:local-diff-terms}. 
 \end{proof}
 
-
-
 \begin{algorithm}
-  \KwIn{$s_{k-1} \in \dtr (Z_{k-1} \cup U_{\ell})$}
-  \KwOut{$s'_{k} \in \dtr \bigl\{(a_k, s_{k-1}(a_k, b_k, b_k), 0) \cup U_{\ell}\bigr\}$}
+\KwOut{$\sansd_{n^2}$, the Cayley table of a \ld op for $A^2 \times \{0,1\}$}
 
-  compute $p_1 \in \dtr \{(a_k, s_{k-1}(a_k,b_k,b_k), 0), (a_0, b_0, 1)\}$;
+  Compute table $\sansd_0$ of a \ldt op for $Z_0 \cup U_{n^2}$ (Alg.~\ref{alg:new-2-1});
 
-  \For {$1\leq i < n^2$} {
-    compute $q_i\in \dtr \{(a_k, s_{k-1}(a_k,b_k,b_k), 0), (p_i(a_i, a_i, b_i), b_i, 1)\}$;
+  \ForAll {$1\leq k <{n^2}$} {
 
-    form $p_{i+1}(x,y,z) = q_i(p_i(x,y,z), p_i(y,y,z), z)$;
+    compute the table $\sansd'_{k+1}$ of a \ldto for $\{(a_k, \sansd_{k}[a_k, b_k, b_k], 0)\} \cup U_{n^2}$;\\[4pt]
+    %(Alg.~\ref{alg:new-2-1});\\[4pt]
+
+    form $\sansd_{k+1}[x,y,z] := \sansd'_{k+1}\bigl[x, \sansd_{k}[x,y,y], \sansd_{k}[x,y,z]\bigr]$ $(\forall x,y,z)$;
   }
-
-  \Return $s'_k := p_{n^2}$
-  \caption{(Stage $k$) \ldt op for $\{(a_k, s_{k-1}(a_k, b_k, b_k), 0)\} \cup U_{\ell}$\label{alg:new-2-2}}
-\end{algorithm}
-
-\begin{lemma}
-  \label{lem:20}
-  If $s'_k:=p_{n^2}$ is the output of Algorithm~\ref{alg:new-2-2}, then
-  \begin{enumerate}[i.]
-    \item \label{item:1}
-    $s'_k$ is a \ldto for $\{(a_k, s_{k-1}(a_k, b_k, b_k), 0)\} \cup U_\l$;
-    \item \label{item:2}
-    $s_k(x,y,z):= s'_k(x,s_{k-1}(x,y,y),s_{k-1}(x,y,z))$ is a \ldto for $Z_k \cup U_{\ell}$.
-  \end{enumerate}
-  \end{lemma}
-  \begin{proof}
-    Let $c_k := s_{k-1}(a_k, b_k, b_k)$ and $\gamma_k:= \Cg^{\alg{A}}(a_k, c_k)$.
-    We want to show
-    $s'_k(a_k, c_k, c_k) \comr{\gamma_k} a_k$, and
-    $s'_k(a_i, a_i, b_i) = b_i$ $(0\leq i < n^2)$.
-    If follows from the definition of $s'_k$ that
-    \begin{align}
-      s'_k(a_k, c_k, c_k) &=
-      q_{\l}( p_{\l}(a_k, c_k, c_k),   p_{\l}(c_k, c_k, c_k), c_k )\nonumber\\
-      &=q_{\l}( p_{\l}(a_k, c_k, c_k),   c_k, c_k ).\label{eq:00010}
-    \end{align}
-
-  \noindent \underline{Claim 1}: For $1\leq i < n^2$,
-  $a_k \comr{\gamma_k} p_i(a_k, c_k,c_k)$.\\[4pt]
-  \emph{Proof:} This holds for $i=1$ by choice of $p_1$.  Fix $i>1$ and assume the claim holds
-  for $p_{i-1}$.  Then, since $q_{i-1}\in \dtr (a_k, c_k, 0)$, we have
-  \begin{align*}
-    p_i(a_k, c_k, c_k)&=
-    q_{i-1}(p_{i-1}(a_k, c_k, c_k), p_{i-1}(c_k, c_k, c_k), c_k)\\
-    & \comr{\gamma_k} q_{i-1}(a_k, c_k, c_k) \comr{\gamma_k}  a_k,
-  \end{align*}
-  which proves the claim.
-
-  Taking $i=\ell$ in Claim 1 yields
-  $p_\l(a_k, c_k, c_k)\comr{\gamma_k} a_k$, and plugging this into~(\ref{eq:00010}) yields
-  %Since $q_{\l}\in \dtr (a_k, c_k, 0)$,  %implies
-  $s'_k(a_k, c_k, c_k) \comr{\gamma_k} q_{\l}( a_k, c_k, c_k ) \comr{\gamma_k} a_k$, as desired.
-
-  Next, consider
-$s'_k(a_i, a_i, b_i) =
-    q_{\l}( p_{\l}(a_i, a_i, b_i),   p_{\l}(a_i, a_i, b_i), b_i )$.
-  As in the proof of Lemma~\ref{lem:19}, we have $p_j(a_k, a_k, b_k) = b_k$
-  for all $0 \leq k\leq j < n^2$, so
-  $s'_k(a_i, a_i, b_i) =  q_{\l}( b_i,  b_i, b_i ) = b_i$, as desired.
-This completes the proof of~(\ref{item:1}).
-
-We prove assertion~(\ref{item:2}). The fact that
-$s_k \in \dtr U_\ell$ readily follows from\\[4pt]
-\noindent \underline{Claim 2}: For $0\leq i \leq k$, $q_k(p_k(a_i, a_i,b_i), p_k(a_i, a_i,b_i), b_i) = b_i$.\\[4pt]
-\emph{Proof:} If $k=i$, the claim follows from
-$q_k \in \dtr (p_i(a_i, a_i, b_i), b_i, 1)$, and if $0=i<k=1$, then it follows from
-$p_1 \in \dtr (a_0, b_0, 1)$.  Let $0<i<k$, and assume
-the claim holds for indices $0 \leq k-1$. Then,
-\[
-  p_k(a_i, a_i,b_i) = q_{k-1}(p_{k-1}(a_i, a_i,b_i), p_{k-1}(a_i, a_i,b_i), b_i) = q_{k-1}(b_i, b_i, b_i),
-\]
-so $q_k(p_k(a_i, a_i,b_i), p_k(a_i, a_i,b_i), b_i) = q_k(b_i, b_i, b_i) = b_i$,
-proving Claim 2.
-%notice that $s_1 \in \dtr \bigl(Z_1 \cup U_\ell)$.  Indeed,
-
-To complete the proof of~(\ref{item:2}),
-we must show that $s_k \in \dtr Z_k$.
-We already have $s_0\in \dtr Z_0$, by Lemma~\ref{lem:19},
-so it suffices to show that $s_j \in \dtr Z_j$ implies
-$s_{j+1} \in \dtr Z_{j+1}$.
-Fix $1\leq j < n^2$ and assume $s_j \in \dtr Z_j$.
-By definition,
-$s_{j+1}(a_i, b_i, b_i) =  s'_{j+1}(a_i,s_{j}(a_i,b_i,b_i),s_{j}(a_i,a_i,a_i))$, and
-$a_i \comr{\theta_i} s_j(a_i, b_i, b_i)$ by the inductive hypothesis. Therefore,
-$s_{j+1}(a_i, b_i, b_i) \comr{\theta_i} s'_{j+1}(a_i,a_i,a_i) = a_i$, as desired.
-
-  \end{proof}
-
-
-\begin{algorithm}
-\KwOut{$s_{n^2} \in \dtr (Z_{\ell} \cup U_{\ell})$}
-
-  compute $s_0 := p_{\ell}$ from Alg.~\ref{alg:new-2-1}
-
-  \For {$0< k <{n^2}$} {
-
-    compute $s'_k \in \dtr \bigl((a_k, s_{k-1}(a_k, b_k, b_k), 0) \cup U_{\ell}\bigr)$\\
-    (call Alg.~\ref{alg:new-2-2} with input $s_{k-1}$)\\[4pt]
-
-    form $s_k(x,y,z) := s'_k(x, s_{k-1}(x,y,y), s_{k-1}(x,y,z))$
-  }
-  \Return $s_{n^2}$
-  \caption{(Outer loop) compute \ldt  op for $A^2 \times \{0,1\}$\label{alg:new-2-3}}
+  \Return $\sansd_{n^2}$
+  \caption{Return the Cayley table of a difference term operation for $\alg{A}$\label{alg:new-2-3}}
 \end{algorithm}
 
 
 \begin{prop}
-  The operation $s_{n^2}$ returned by Algorithm~\ref{alg:new-2-3} is a \ldto for $A^2 \times \{0,1\}$, hence a difference term operation for $\alg{A}$.
+  The output of Algorithm~\ref{alg:new-2-3} is the Cayley table of a \ldto for $A^2 \times \{0,1\}$, hence a difference term operation for $\alg{A}$.
 \end{prop}
 
 \begin{proof}
-This follows immediately from Lemmas~\ref{lem:19} and~\ref{lem:20}.
+This follows easily from Lemma~\ref{lem:19} and the proof of Theorem~\ref{thm:local-diff-terms}. 
 \end{proof}
 
 
@@ -2642,7 +2530,135 @@ This follows immediately from Lemmas~\ref{lem:19} and~\ref{lem:20}.
 
 
 
-
+  \begin{comment}
+    First we show $s_0(a,b,b_0) \comr{\thetaab} a$. Recall, $\ell:=n^2-1$, and
+    $s_0(x,y,z):= q_\ell(p_\ell(x,y,z), p_\ell(y,y,z), z)$, so
+    \begin{align*}
+      s_0(a,b,b)&= q_\ell(p_\ell(a,b,b), p_\ell(b,b,b), b);\\
+      &= q_\ell(p_\ell(a,b,b), b, b);
+    \end{align*}
+    \underline{Claim 1}: If $0 < k < n^2$, then $a \comr{\thetaab} p_k(a, b, b)$.\\
+    \emph{Proof:} Clearly $a \comr{\thetaab} p_1(a, b, b)$, since $p_1 \in \dtr (a, b, 0)$.
+    Fix $k < n^2$ and assume $p_{k-1} \in \dtr (a, b, 0)$; that is,
+    $a \comr{\thetao} p_{k-1}(a,b,b)$. Then
+    $p_k(a,b,b) = q_{k-1}(p_{k-1}(a,b,b), b, b) \comr{\thetao}
+      q_{k-1}(a, b, b)$.
+    The latter is congruent to  $a$ modulo $\com{\thetaab}$, since
+    $q_k\in \dtr \{(a,b, 0)\}$ for all $0< k < n^2$. This proves the claim, from which it follows that
+    $s_0(a,b,b) \comr{\thetaab} q_\ell(a,b,b) \comr{\thetao} a$, as desired.
+    
+    Next, we show for $0 < k < n^2$ that $s_0(a_k, a_k, b_k) = b_k$.
+    By definition
+    \begin{equation*}
+    %\label{eq:s0-2}
+    s_0(a_k, a_k, b_k) = q_\ell(p_\ell(a_k,a_k,b_k), p_\ell(a_k,a_k,b_k), b_k).
+    \end{equation*}
+    \underline{Claim 2}: If $0 = k< j$ or $0 \leq k\leq j < n^2$, then $p_j(a_k, a_k, b_k) = b_k$.\\
+      \emph{Proof:} By construction, $p_1 (a_0, a_0, b_0) = b_0$.  Fix $j$ and $k$ such that $0\leq k\leq j < n^2$.
+      Assume $p_j(a_k, a_k, b_k) = b_k$. Then, since $q_j$ belongs to $\dtr (p_{j}(a_j, a_j, b_j),b_j, 1)$, we have
+      \begin{align*}
+        p_{j+1}(a_k, a_k, b_k) &=
+        q_{j}(p_{j}(a_k, a_k, b_k), p_{j}(a_k, a_k, b_k), b_k)\\
+        &=\begin{cases}
+          q_{j}(b_k, b_k, b_k), & k<j\\
+          b_k, & k=j
+        \end{cases}\\
+        &= b_k.
+      \end{align*}
+    Claim 2 is now proved, from which it follows that $s_0(a_k, a_k, b_k) = b_k$. This completes the proof of
+    Lemma~\ref{lem:19}.
+    \end{proof}
+    
+    \begin{algorithm}
+      \KwIn{$s_{k-1} \in \dtr (Z_{k-1} \cup U_{\ell})$}
+      \KwOut{$s'_{k} \in \dtr \bigl\{(a_k, s_{k-1}(a_k, b_k, b_k), 0) \cup U_{\ell}\bigr\}$}
+    
+      compute $p_1 \in \dtr \{(a_k, s_{k-1}(a_k,b_k,b_k), 0), (a_0, b_0, 1)\}$;
+    
+      \For {$1\leq i < n^2$} {
+        compute $q_i\in \dtr \{(a_k, s_{k-1}(a_k,b_k,b_k), 0), (p_i(a_i, a_i, b_i), b_i, 1)\}$;
+    
+        form $p_{i+1}(x,y,z) = q_i(p_i(x,y,z), p_i(y,y,z), z)$;
+      }
+    
+      \Return $s'_k := p_{n^2}$
+      \caption{(Stage $k$) \ldt op for $\{(a_k, s_{k-1}(a_k, b_k, b_k), 0)\} \cup U_{\ell}$\label{alg:new-2-2}}
+    \end{algorithm}
+    
+    \begin{lemma}
+      \label{lem:20}
+      If $s'_k:=p_{n^2}$ is the output of Algorithm~\ref{alg:new-2-2}, then
+      \begin{enumerate}[i.]
+        \item \label{item:1}
+        $s'_k$ is a \ldto for $\{(a_k, s_{k-1}(a_k, b_k, b_k), 0)\} \cup U_\l$;
+        \item \label{item:2}
+        $s_k(x,y,z):= s'_k(x,s_{k-1}(x,y,y),s_{k-1}(x,y,z))$ is a \ldto for $Z_k \cup U_{\ell}$.
+      \end{enumerate}
+      \end{lemma}
+      \begin{proof}
+        Let $c_k := s_{k-1}(a_k, b_k, b_k)$ and $\gamma_k:= \Cg^{\alg{A}}(a_k, c_k)$.
+        We want to show
+        $s'_k(a_k, c_k, c_k) \comr{\gamma_k} a_k$, and
+        $s'_k(a_i, a_i, b_i) = b_i$ $(0\leq i < n^2)$.
+        If follows from the definition of $s'_k$ that
+        \begin{align}
+          s'_k(a_k, c_k, c_k) &=
+          q_{\l}( p_{\l}(a_k, c_k, c_k),   p_{\l}(c_k, c_k, c_k), c_k )\nonumber\\
+          &=q_{\l}( p_{\l}(a_k, c_k, c_k),   c_k, c_k ).\label{eq:00010}
+        \end{align}
+    
+      \noindent \underline{Claim 1}: For $1\leq i < n^2$,
+      $a_k \comr{\gamma_k} p_i(a_k, c_k,c_k)$.\\[4pt]
+      \emph{Proof:} This holds for $i=1$ by choice of $p_1$.  Fix $i>1$ and assume the claim holds
+      for $p_{i-1}$.  Then, since $q_{i-1}\in \dtr (a_k, c_k, 0)$, we have
+      \begin{align*}
+        p_i(a_k, c_k, c_k)&=
+        q_{i-1}(p_{i-1}(a_k, c_k, c_k), p_{i-1}(c_k, c_k, c_k), c_k)\\
+        & \comr{\gamma_k} q_{i-1}(a_k, c_k, c_k) \comr{\gamma_k}  a_k,
+      \end{align*}
+      which proves the claim.
+    
+      Taking $i=\ell$ in Claim 1 yields
+      $p_\l(a_k, c_k, c_k)\comr{\gamma_k} a_k$, and plugging this into~(\ref{eq:00010}) yields
+      %Since $q_{\l}\in \dtr (a_k, c_k, 0)$,  %implies
+      $s'_k(a_k, c_k, c_k) \comr{\gamma_k} q_{\l}( a_k, c_k, c_k ) \comr{\gamma_k} a_k$, as desired.
+    
+      Next, consider
+    $s'_k(a_i, a_i, b_i) =
+        q_{\l}( p_{\l}(a_i, a_i, b_i),   p_{\l}(a_i, a_i, b_i), b_i )$.
+      As in the proof of Lemma~\ref{lem:19}, we have $p_j(a_k, a_k, b_k) = b_k$
+      for all $0 \leq k\leq j < n^2$, so
+      $s'_k(a_i, a_i, b_i) =  q_{\l}( b_i,  b_i, b_i ) = b_i$, as desired.
+    This completes the proof of~(\ref{item:1}).
+    
+    We prove assertion~(\ref{item:2}). The fact that
+    $s_k \in \dtr U_\ell$ readily follows from\\[4pt]
+    \noindent \underline{Claim 2}: For $0\leq i \leq k$, $q_k(p_k(a_i, a_i,b_i), p_k(a_i, a_i,b_i), b_i) = b_i$.\\[4pt]
+    \emph{Proof:} If $k=i$, the claim follows from
+    $q_k \in \dtr (p_i(a_i, a_i, b_i), b_i, 1)$, and if $0=i<k=1$, then it follows from
+    $p_1 \in \dtr (a_0, b_0, 1)$.  Let $0<i<k$, and assume
+    the claim holds for indices $0 \leq k-1$. Then,
+    \[
+      p_k(a_i, a_i,b_i) = q_{k-1}(p_{k-1}(a_i, a_i,b_i), p_{k-1}(a_i, a_i,b_i), b_i) = q_{k-1}(b_i, b_i, b_i),
+    \]
+    so $q_k(p_k(a_i, a_i,b_i), p_k(a_i, a_i,b_i), b_i) = q_k(b_i, b_i, b_i) = b_i$,
+    proving Claim 2.
+    %notice that $s_1 \in \dtr \bigl(Z_1 \cup U_\ell)$.  Indeed,
+    
+    To complete the proof of~(\ref{item:2}),
+    we must show that $s_k \in \dtr Z_k$.
+    We already have $s_0\in \dtr Z_0$, by Lemma~\ref{lem:19},
+    so it suffices to show that $s_j \in \dtr Z_j$ implies
+    $s_{j+1} \in \dtr Z_{j+1}$.
+    Fix $1\leq j < n^2$ and assume $s_j \in \dtr Z_j$.
+    By definition,
+    $s_{j+1}(a_i, b_i, b_i) =  s'_{j+1}(a_i,s_{j}(a_i,b_i,b_i),s_{j}(a_i,a_i,a_i))$, and
+    $a_i \comr{\theta_i} s_j(a_i, b_i, b_i)$ by the inductive hypothesis. Therefore,
+    $s_{j+1}(a_i, b_i, b_i) \comr{\theta_i} s'_{j+1}(a_i,a_i,a_i) = a_i$, as desired.
+    
+      \end{proof}
+    \end{comment}
+    
 
 
 
