a couple of minor changes

--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -561,8 +561,8 @@ Difference Term in an Idempotent Variety}
 \address{McMaster University\\Mathematics Dept\\Hamilton L8S 4K1\\
 CAN}
 
-\thanks{This research was supported by the National
-Science Foundation under Grant No. 1500235}
+\thanks{The first and second authors were supported by the National
+Science Foundation under Grant No. 1500235 and the third author was supported by a grant from the National Science and Engineering Research Council of Canada}
 
 \date{\today}
 
@@ -707,7 +707,7 @@ $\bbV(\alg{A})$ has nonempty tails but lacks \utyp's and \styp's.
 Then a nonempty tail must occur in a 3-generated subalgebra of $\alg{A}^2$.
 A key fact used in the proof of this is that a finite algebra in a locally finite variety that omits
 \utyp's and \styp's has a congruence lattice that---modulo
-the {\it solvability congruence} (defined below)---is (join) semidistributive.
+the {\it solvability congruence} ---is (join) semidistributive.
 %The authors use this to prove that congruence modularity is polynomial-time decidable.
 
 %However, proving lack of tails uses the fact that a variety omitting
@@ -929,7 +929,7 @@ test can be performed in polynomial-time---that is, the running
 time of the test is bounded by a polynomial function of the size of $\alg{A}$.
 The main tools developed to this end are presented
 in~\cite[Section~3]{Freese:2009} as a sequence of
-lemmas that are used %enable the authors 
+lemmas that are used %enable the authors
 to prove the following:
 if $\alg{A}$ is finite and idempotent, and if
 $\mathcal V = \bbV(\alg{A})$ omits types \utyp and \styp,
@@ -1920,7 +1920,7 @@ has a \ldto, as we now prove.
 
 \begin{theorem} %[\protect{cf.~\cite[Theorem 2.2]{MR3239624}}]
   \label{thm:local-diff-terms}
-  Let 
+  Let
   $\alg A$ be a finite idempotent algebra. %% . Define
   %% $\sS= A \times A \times \{0,1\}$
   If every pair
@@ -2205,7 +2205,7 @@ The following proposition provides another avenue for constructing a polynomial-
 
 \begin{proof}
   Of course if $\bbV (\alg A)$ has a difference term then each 3-generated subalgebra of $\alg A^2$ has a difference term operation. For the converse, we refer to the proof of Theorem~\ref{thm:KearnesThm}~\cite[Theorem 3.8]{MR1358491}.  One part of this theorem establishes that if an algebra $\alg B$ is in a variety that has a difference term, then all type~\atyp minimal sets of $\alg B$ have empty tails.  A careful reading of the proof of this fact shows that a weaker hypothesis will suffice, namely that all quotients of $\alg B$ have difference term operations.  This is equivalent to just $\alg B$ having a difference term operation, since this property is preserved under taking quotients.
-  \mav{This is true, I think.  Should it be mentioned somewhere, as part of a general discussion of difference term operations?}
+  %\mav{This is true, I think.  Should it be mentioned somewhere, as part of a general discussion of difference term operations?}
 
   To complete the proof of this proposition, we use Corollary~\ref{cor:diffterm}. Suppose that each 3-generated subalgebra of $\alg A^2$ has a difference term operation.  Then, in particular, each 2-generated subalgebra of $\alg A$ does.  This rules out that $\sansH \sansS (\alg{A})$ contains an algebra that is term equivalent to the 2-element set.  It also follows, from the previous paragraph, that no 3-generated subalgebra of $\alg A^2$ has a prime quotient of type~\atyp whose minimal sets have nonempty tails.
 \end{proof}
