add second NSF grant number

--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -562,7 +562,7 @@ Difference Term in an Idempotent Variety}
 CAN}
 
 \thanks{The first and second authors were supported by the National
-Science Foundation under Grant No. 1500235 and the third author was supported by a grant from the National Science and Engineering Research Council of Canada}
+Science Foundation under Grant Numbers 1500218 and 1500235; the third author was supported by a grant from the National Science and Engineering Research Council of Canada.}
 
 \date{\today}
 
